[package]
name = "feaparser"
version = "0.0.0"
authors = ["Fredrick Brennan <copypaste@kittens.ph>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1"
pest_derive = "2.1"
pest_ascii_tree = "0.1"
fonttools = { git = "https://github.com/simoncozens/fonttools-rs", features = ["rayon"] }
