[package]
name = "feaparser"
version = "0.0.0"
authors = ["Fredrick Brennan <copypaste@kittens.ph>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1"
pest_derive = "2.1"
pest_ascii_tree = "0.1"
fonttools = { path="/Users/simon/hacks/typography/fonttools-rs", features = ["rayon"] }
snafu = "0.6.10"
itertools = "0.10.1"
clap = { version = "2.3.33", optional = true }

[features]
build-binary = ["clap"]

[[bin]]
name = "featiculus"
required-features = ["build-binary"]
