[package]
name = "feaparser"
version = "0.0.0"
authors = ["Fredrick Brennan <copypaste@kittens.ph>"]
edition = "2018"
build = "build_tests.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.3"
pest_derive = "2.3"
pest_ascii_tree = "0.1"
